objects/AIA_Benefit_Design_Contact__c.object
<CustomObject>
    <fields>
        <fullName>BC_Plan_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BC - Plan Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BS_Plan_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BS - Plan Codes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Design_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Benefit Design Form</label>
        <referenceTo>AIA_Benefit_Design_Form__c</referenceTo>
        <relationshipLabel>Benefit Design Contact</relationshipLabel>
        <relationshipName>Benefit_Design_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefit Design Contact</relationshipLabel>
        <relationshipName>Benefit_Design_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Address__c</fullName>
        <formula>Street_Address__c + BR() + 
City__c + IF(City__c &lt;&gt;'' &amp;&amp; State__c &lt;&gt;'' , ' , ', '')+ State__c + BR() + 
County__c + IF(County__c &lt;&gt;'' &amp;&amp; Zip__c &lt;&gt;'' , ' , ', '') + Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Par_Plan_Arrangements__c</fullName>
        <defaultValue>"Migration note: For CFMI (MD) Control accounts, add GHMSI (DC) as a Par Plan by adding 080 in the BC column and 580 in the BS column.  For GHMSI (DC) Control accounts, add CFMI (MD) as a Par Plan by adding 190 in the BC column and 690 in the BS column.  Michigan 210/710, Mass 200/700, New Jersey 280/780"</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Par Plan Arrangements</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Par_Plan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Par Plan name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Servicing_Arrangement__c</fullName>
        <label>Servicing Arrangement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Minimum</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Benefit Design Contact</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Design Contact</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>